--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            margin-top: 25%;
+            margin-top: 10%;
             padding-bottom: 20px;
             overflow: auto;
         }
@@ -535,10 +535,12 @@
 
         #pagination-controls {
             text-align: center;
-            /* Centrera pagineringsknapparna */
-            margin-bottom: 40px; /* Justera detta värde efter behov */
-            padding: 30px 0px;
-            /* Avstånd ovanför och under pagineringskontrollerna */
+            margin-top: 20px;
+            /* Lägg till margin-top för att skapa utrymme ovanför siffrorna */
+            margin-bottom: 50px;
+            /* Justera detta värde för att undvika överlappning med footern */
+            padding: 10px 0;
+            /* Minskat från 30px för att minska utrymmet */
         }
     </style>
 </head>
