--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             color: white;
             text-align: center;
             padding: 10px 20px;
-            position: relative;
+            position: fixed;
             z-index: 1;
             /* Lägre än pagineringskontrollerna så att den inte överlappar */
             bottom: 0;
