--- a/index.html
+++ b/index.html
@@ -529,8 +529,8 @@
         }
 
         #pagination-controls button:hover {
-            background-color: #f0f0f0;
-            /* Ljusgrå bakgrund när muspekaren svävar över */
+            background-color: #ffff00;
+            /* Ljusgul bakgrund när muspekaren svävar över */
         }
 
         #pagination-controls {
@@ -540,7 +540,7 @@
             text-align: center;
             margin-top: 20px;
             /* Justera detta för att skapa utrymme ovanför pagineringskontrollerna */
-            margin-bottom: 50px;
+            margin-bottom: 150px;
             /* Justera detta för att skapa utrymme under pagineringskontrollerna */
             padding: 10px 0;
             /* ... resten av din styling för pagineringskontrollerna ... */
