--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
             padding: 10px 20px;
             position: fixed;
             bottom: 0;
+            top: 10;
             width: 100%;
             display: flex;
             justify-content: space-between;
