--- a/index.html
+++ b/index.html
@@ -534,17 +534,18 @@
             /* Ljusgul bakgrund när muspekaren svävar över */
         }
 
+        /* Uppdateringar för #pagination-controls */
         #pagination-controls {
             position: relative;
+            /* Tar bort fixed position om det finns */
             z-index: 2;
-            /* Säkerställer att pagineringskontrollerna är över footern */
             text-align: center;
             margin-top: 20px;
-            /* Justera detta för att skapa utrymme ovanför pagineringskontrollerna */
-            margin-bottom: 150px;
-            /* Justera detta för att skapa utrymme under pagineringskontrollerna */
+            /* Justera avståndet ovanför pagineringskontrollerna */
+            margin-bottom: 20px;
+            /* Justera avståndet under pagineringskontrollerna */
             padding: 10px 0;
-            /* ... resten av din styling för pagineringskontrollerna ... */
+            /* Lägg till övriga stilar här */
         }
     </style>
 </head>
