--- a/index.html
+++ b/index.html
@@ -949,9 +949,11 @@
             window.addEventListener("scroll", function () {
                 var currentScroll = window.pageYOffset || document.documentElement.scrollTop;
                 var dataContainer = document.getElementById('data-container');
+                var searchContainer = document.querySelector('.search-container');
                 var paginationControls = document.getElementById('pagination-controls');
                 var windowHeight = window.innerHeight;
                 var bodyHeight = document.body.offsetHeight;
+                var searchContainerHeight = searchContainer.offsetHeight;
 
                 // Om det finns sökresultat visas
                 if (dataContainer && dataContainer.innerHTML.trim() !== '') {
@@ -961,17 +963,27 @@
                         backgroundContainer.classList.add('blur-background');
                         dataContainer.classList.remove('initial');
                         dataContainer.classList.add('search-active');
-                    } else if (currentScroll <= 0) {
+                        // Justera padding-top när användaren scrollar ner
+                        dataContainer.style.paddingTop = '0px';
+                    } else {
                         // Scroll uppåt till toppen av sökresultatsidan
                         searchContainer.classList.remove('hidden-search');
                         backgroundContainer.classList.remove('blur-background');
                         dataContainer.classList.add('initial');
                         dataContainer.classList.remove('search-active');
+                        // Justera padding-top när användaren scrollar uppåt
+                        dataContainer.style.paddingTop = searchContainerHeight + 'px';
                     }
                 } else {
                     // På startsidan, ingen suddighet eller döljning när man scrollar
                     searchContainer.classList.remove('hidden-search');
                     backgroundContainer.classList.remove('blur-background');
+                    // Säkerställ att padding-top är korrekt även på startsidan
+                    if (currentScroll <= searchContainerHeight) {
+                        dataContainer.style.paddingTop = searchContainerHeight + 'px';
+                    } else {
+                        dataContainer.style.paddingTop = '0px';
+                    }
                 }
                 lastScrollTop = currentScroll <= 0 ? 0 : currentScroll;
 
@@ -982,6 +994,7 @@
                     paginationControls.style.display = 'none';
                 }
             }, false);
+
         });
 
 
