--- a/index.html
+++ b/index.html
@@ -203,33 +203,36 @@
 
         @media (max-width: 480px) {
             .matratt {
-                flex: 0 0 100%;
-                /* Tar upp hela bredden */
+                flex-basis: 100%;
+                /* Ändra flex-basis till 100% */
                 max-width: 100%;
-                /* Maxbredd sätts till 100% */
+                /* Säkerställ att maxbredden är 100% */
                 margin: 10px 0;
-                /* Justera marginalerna */
+                /* Justera marginaler för att passa mobilskärmen */
             }
 
             .search-container {
-                position: fixed;
+                width: 90%;
+                /* Öka bredden på sökfältet */
                 top: 10%;
                 /* Justera positionen så att den inte täcker hela skärmen */
-                left: 50%;
-                transform: translate(-50%, -10%);
-                width: 90%;
-                /* Öka bredden för sökfältet på små skärmar */
             }
 
             .input-button-container input[type='text'],
             .input-button-container button {
-                flex-grow: 1;
                 padding: 15px;
-                /* Öka padding för att göra det lättare att interagera med */
+                /* Öka padding för större tryckyta */
                 font-size: larger;
                 /* Öka teckenstorlek för bättre läsbarhet */
             }
+
+            body,
+            html {
+                overflow-x: hidden;
+                /* Förhindra horisontell scrollning */
+            }
         }
+
 
 
 
