--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             margin: 5px 0;
         }
 
-       
+
 
 
 
@@ -554,27 +554,21 @@
 
         @media (max-width: 480px) {
             .matratt {
-                flex-basis: 100%;
-                /* Ändra flex-basis till 100% */
+                flex: 0 0 100%;
+                /* Varje maträtt tar upp hela bredden */
                 max-width: 100%;
-                /* Säkerställ att maxbredden är 100% */
                 margin: 10px 0;
-                /* Justera marginaler för att passa mobilskärmen */
             }
 
             .search-container {
                 width: 90%;
-                /* Öka bredden på sökfältet */
                 top: 10%;
-                /* Justera positionen så att den inte täcker hela skärmen */
             }
 
             .input-button-container input[type='text'],
             .input-button-container button {
                 padding: 15px;
-                /* Öka padding för större tryckyta */
                 font-size: larger;
-                /* Öka teckenstorlek för bättre läsbarhet */
             }
 
             body,
@@ -583,7 +577,6 @@
                 /* Förhindra horisontell scrollning */
             }
         }
-
     </style>
 </head>
 
