--- a/index.html
+++ b/index.html
@@ -558,16 +558,20 @@
                 /* Varje maträtt tar upp hela bredden */
                 max-width: 100%;
                 margin: 10px 0;
+                padding: 10px;
+                /* Justera padding för att förbättra utseendet */
             }
 
             .search-container {
                 width: 90%;
+                /* Öka bredden på sökfältet för mobilen */
                 top: 10%;
             }
 
             .input-button-container input[type='text'],
             .input-button-container button {
                 padding: 15px;
+                /* Öka storleken på knappar och input för bättre användbarhet */
                 font-size: larger;
             }
 
@@ -576,6 +580,9 @@
                 overflow-x: hidden;
                 /* Förhindra horisontell scrollning */
             }
+
+            /* Ytterligare anpassningar om så önskas */
+
         }
     </style>
 </head>
