lägger till viewport meta tag för att anpassa skärmen för den enhet som besökare är på

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Lägg till denna länk i din head-tagg -->
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
