--- a/index.html
+++ b/index.html
@@ -281,9 +281,15 @@
         }
 
         .hidden-search {
+            opacity: 0;
+            visibility: hidden;
+            transform: translateY(-100%);
+            transition: transform 0.3s, opacity 0.3s, visibility 0.3s;
+            /* Add transition for smooth changes */
+            /*
             transform: translateY(-100%);
             transition: transform 0.3s;
-            display: none;
+            display: none; */
         }
 
         .blur-background {
@@ -564,6 +570,8 @@
                 width: 90%;
                 top: 10%;
                 transform: translate(-50%, -10%);
+                transition: opacity 0.3s, visibility 0.3s;
+                /* Add smooth transition for opacity and visibility changes */
             }
 
             .input-button-container input[type='text'],
@@ -955,6 +963,7 @@
             let lastScrollTop = 0;
 
             window.addEventListener("scroll", function () {
+                console.log("Scroll event detected!"); // Denna rad ska logga i konsolen vid scrollning
                 var currentScroll = window.pageYOffset || document.documentElement.scrollTop;
                 var dataContainer = document.getElementById('data-container');
                 var paginationControls = document.getElementById('pagination-controls');
