--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 
         .hidden-search {
             opacity: 0;
-            visibility: hidden;
+            display: none;
             transform: translateY(-100%);
             transition: transform 0.3s, opacity 0.3s, visibility 0.3s;
             /* Add transition for smooth changes */
