--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
 
 
     <div class="search-container">
-        <!-- Ny slider här -->
+        <!-- Ny slider här 
         <div class="search-mode-container">
             <div class="search-mode-label">←Sök på ingredienser</div>
             <label class="switch large">
@@ -610,7 +610,7 @@
                 <span class="slider round large"></span>
             </label>
             <div class="search-mode-label">Sök på maträtt→</div>
-        </div>
+        </div> -->
         <!-- Slider-knappar ovanför sökfältet -->
         <div class="slider-button-container">
             <div class="veg-container">
@@ -633,7 +633,7 @@
         <div class="input-button-container">
             <input type="text" id="searchInput" placeholder="Skriv ingredienser eller maträtt och tryck Enter...">
             <button onclick="addTagFromButton()">Lägg till</button> <!-- Ny knapp för att lägga till taggar -->
-            <button onclick="performSearch()">Sök</button>
+           <!-- <button onclick="performSearch()">Sök</button> -->
         </div>
 
         <!-- Taggarna här -->
